# decision-transformer

./: .gitignore  README.md  download_data.sh  flake.nix  pyproject.toml
app/: __init__.py  buffer.py  config.py  dataset.py  fixed_replay_buffer.py  layer.py  main.py  model.py  optimizer.py  scheduler.py  test.py  train.py  utils.py
autorom/: autorom.patch  default.nix
scripts/: download_data_pong.sh  install_libs.sh  interactive.sh  job.sh  link_cuda.sh  load_modules.sh
